--- a/landing.html
+++ b/landing.html
@@ -10,15 +10,22 @@
   <title>Mountainside Business Center</title>
 </head>
 <body>
-  <div class="first-landing animated fadeOut">
+  <!-- <div class="first-landing animated fadeOut">
     <h1 class="animated fadeInDown"><i>Welcome</i></h1>
     <span class="animated fadeInUp">to</span>
     <h2 class="animated fadeInRight">Mountainside <span class="animated fadeInLeft">Business Center</span></h2>
-  </div>
+  </div> -->
   <section class="wrapper animated fadeIn">
     <header>
       <img id="mbc-logo"src="./Images/MBC-logo.png" alt="">
-      <nav>Navigation bar</nav>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Facilities</a>
+        <a href="#">Floor Plans</a>
+        <a href="#">Our Tenants</a>
+        <a href="#">Contact Us</a>
+        <a href="#">Articles</a>
+      </nav>
     </header>
     <main>
       
