--- a/about.html
+++ b/about.html
@@ -6,33 +6,41 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/about.css">
+  <link rel="stylesheet" href="./animate.css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <title>Why MBC?</title>
 </head>
 
 <body>
+  <div class="backbutton animated tada infinite"><a href="#"><i class="fa fa-arrow-circle-o-left" aria-hidden="true"></i></a></div>
   <div class="content">
     <section class="wrapper">
-      <img id="image1" src="./Images/lobby.jpg" alt="">
+      <img id="image1" src="./Images/outside.jpg" alt="">
       <section class="text-wrap">
-        <h2>Why Mountainside Business Center?</h2>
+        <div>
+        <h2>Why Mountainside?</h2>
         <div><!--HR DIV--></div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore exercitationem optio, sapiente ipsa nobis
-          aut assumenda adipisci eos nemo esse porro, maiores, non minus necessitatibus. Omnis, eius fuga. Quibusdam,
-          non!</p>
+      </div>
+        <ul>
+          <li>Item number one</li>
+          <li>Item number two</li>
+          <li>Item number three</li>
+          <li>Item number four</li>
+        </ul>
           <button class="button1">More Info &nbsp<i class="fa fa-caret-right" aria-hidden="true"></i></button>
       </section>
     </section>
     <section class="wrapper">
       <section class="text-wrap">
-        <h2>Interesting Stuff</h2>
-        <div><!--HR DIV--></div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum porro ducimus possimus neque sapiente minima
-          non inventore dicta minus fuga vero sunt rerum blanditiis, culpa necessitatibus consequatur accusantium dolore
-          et.</p>
+          <div>
+              <h2>Look No Further!</h2>
+              <div><!--HR DIV--></div>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aut laborum deserunt beatae, alias quas. Voluptates dolor, similique iste aut, accusantium sed consequuntur</p>
+            <p>Lots of stuff and things with amazing access to boston, portland, the seacoast and multiple college campuses. Free utilities and cleaning included in price of rent this place is off the chain and will be the hub fo your dreams. </p>
           <button class="button2">More Info &nbsp;<i class="fa fa-caret-right" aria-hidden="true"></i></button>
       </section>
-      <img id="image2" src="./Images/outside.jpg" alt="">
+      <img id="image2" src="./Images/lobby.jpg" alt="">
     </section>
     </section>
   </div>
