--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="backbutton animated tada infinite"><a href="#"><i class="fa fa-arrow-circle-o-left" aria-hidden="true"></i></a></div>
+  <div class="backbutton animated tada infinite"><a href="./landing.html"><i class="fa fa-arrow-circle-o-left" aria-hidden="true"></i></a></div>
   <div class="content">
     <section class="wrapper">
       <img id="image1" src="./Images/outside.jpg" alt="">
@@ -22,10 +22,10 @@
         <div><!--HR DIV--></div>
       </div>
         <ul>
-          <li>Item number one</li>
-          <li>Item number two</li>
-          <li>Item number three</li>
-          <li>Item number four</li>
+          <li>FREE UTILITIES</li>
+          <li>Less than 2 hours to major airports</li>
+          <li>State of the art equipment and facilities</li>
+          <li>Spacious floorplans with sound-proof walls</li>
         </ul>
           <button class="button1">More Info &nbsp<i class="fa fa-caret-right" aria-hidden="true"></i></button>
       </section>
