--- a/landing.html
+++ b/landing.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,18 @@
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
   <title>Mountainside Business Center</title>
 </head>
+
 <body>
   <!-- <div class="first-landing animated fadeOut">
     <h1 class="animated fadeInDown"><i>Welcome</i></h1>
     <span class="animated fadeInUp">to</span>
     <h2 class="animated fadeInRight">Mountainside <span class="animated fadeInLeft">Business Center</span></h2>
   </div> -->
-  <section class="wrapper animated fadeIn">
+  <!--Above code is for fadeIn landing page-->
+  <!-- <section class="wrapper animated fadeIn"> -->
+  <section>
     <header>
-      <img id="mbc-logo"src="./Images/MBC-logo.png" alt="">
+      <img id="mbc-logo" src="./Images/MBC-logo.png" alt="">
       <nav>
         <a href="#">Home</a>
         <a href="#">Facilities</a>
@@ -27,18 +31,65 @@
         <a href="#">Articles</a>
       </nav>
     </header>
-    <main>
-      
+    <main class="maincontent">
+      <h1 class="maintext">
+        Do business at<br />
+        <div id="emphasis">The Best</div>
+        space in the<br />
+        Lakes Region!        
+      </h1>
     </main>
-    <footer></footer>
-  
-  
-  
-  
-  
-  
-  
-  
+    <section class="page-break-boxes">
+      <div>
+        <h3>Join Us</h3>
+        <p>things about why you should find your spot with us</p>
+        <button>Learn More</button>
+      </div>
+      <div>
+        <h3>Find your spot</h3>
+        <p>things about why you should find your spot with us</p>
+        <button>Learn More</button>
+      </div>
+      <div>
+        <h3>Work and connect</h3>
+        <p>things about why you should find your spot with us</p>
+        <button>Learn More</button>
+      </div>
+    </section>
+    <footer class="footgrid border">
+      <img class="manager border" src="./Images/manager.png" alt="">
+      <!-- <section> -->
+        <div class="managertitle border">
+          <h2>Gretchen Ryan</h2>
+          <h4>Building Manager</h4>
+        </div>
+        <p class="managerinfo border">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio blanditiis molestias dolorum, alias nemo
+          officia beatae voluptates nostrum, pariatur non sequi quisquam. Perferendis doloremque in unde illum omnis
+          corrupti beatae!</p>
+          
+        <form class="form border" action="">
+          <h1 class="formhead">Have Questions?</h1>
+          <label for="">Name:</label>
+          <input type="text">
+          <label for="">Phone:</label>
+          <input type="text">
+          <label for="">Email:</label>
+          <input type="text">
+          <label for="">Talk to us!</label>
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+        </form>
+      <!-- </section> -->
+
+    </footer>
+
+
+
+
+
+
+
+
   </section>
 </body>
+
 </html>
