--- a/landing.html
+++ b/landing.html
@@ -6,13 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./landing.css">
   <link rel="stylesheet" href="./animate.css">
+  <link href="https://fonts.googleapis.com/css?family=Aclonica&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
   <title>Mountainside Business Center</title>
 </head>
 
 <body>
-  <!-- <div class="first-landing animated fadeOut">
+  <!--
+  <div class="first-landing animated fadeOut">
     <h1 class="animated fadeInDown"><i>Welcome</i></h1>
     <span class="animated fadeInUp">to</span>
     <h2 class="animated fadeInRight">Mountainside <span class="animated fadeInLeft">Business Center</span></h2>
@@ -23,65 +27,86 @@
     <header>
       <img id="mbc-logo" src="./Images/MBC-logo.png" alt="">
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Facilities</a>
-        <a href="#">Floor Plans</a>
-        <a href="#">Our Tenants</a>
-        <a href="#">Contact Us</a>
-        <a href="#">Articles</a>
+        <section class="links">
+          <div><a href="#">Home</a></div>
+          <div><a href="https://www.facebook.com/MountainsideBusinessCenter/">Facebook</a></div>
+          <div><a href="#">Twitter</a></div>
+        </section>
+        <ul class="contactinfo">
+          <li>127 Route 28<br />Ossipee, NH 03864</li>
+          <li>Phone: (603) 833-7166</li>
+          <li>Email: <a href="mailto:manager@mountansidebusinesscenter.com">manager@mountansidebusinesscenter.com</a> </li>
+        </ul>
       </nav>
     </header>
     <main class="maincontent">
-      <h1 class="maintext">
-        Do business at<br />
-        <div id="emphasis">The Best</div>
-        space in the<br />
-        Lakes Region!        
-      </h1>
+      <section>
+        <h1 class="maintext">
+          space in<br />
+          <div id="emphasis"><i>The Ideal</i></div>
+          the Lakes Region
+        </h1>
+      </section>
     </main>
     <section class="page-break-boxes">
       <div>
-        <h3>Join Us</h3>
+        <h3><u>About MBC</u></h3>
         <p>things about why you should find your spot with us</p>
-        <button>Learn More</button>
+        <a href="./about.html">Learn More</a>
       </div>
       <div>
-        <h3>Find your spot</h3>
+        <h3><u>Floor Plans</u></h3>
         <p>things about why you should find your spot with us</p>
-        <button>Learn More</button>
+        <a href="./floor.html">Learn More</a>
       </div>
       <div>
-        <h3>Work and connect</h3>
-        <p>things about why you should find your spot with us</p>
-        <button>Learn More</button>
+        <h3><u>Tenants</u></h3>
+        <p>See a list of all the current tenants who call MBC home!</p>
+        <a href="#">Learn More</a>
       </div>
     </section>
     <footer class="footgrid border">
-      <img class="manager border" src="./Images/manager.png" alt="">
-      <!-- <section> -->
-        <div class="managertitle border">
-          <h2>Gretchen Ryan</h2>
-          <h4>Building Manager</h4>
+      <img class="managerpic border" src="./Images/manager.png" alt="">
+
+      <div class="managertitle border">
+        <h2>Gretchen Ryan</h2>
+        <h4>Building Manager</h4>
+      </div>
+      <div class="managerinfo border">
+        <div>
+          <!--This holds a border-->
         </div>
-        <p class="managerinfo border">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio blanditiis molestias dolorum, alias nemo
+        <p> Gretchen has been serving the Lakes Region community for xx years.adipisicing elit. Exercitationem numquam
+          officiis debitis harum reprehenderit
+          consequuntur vel, suscipit accusantium dolorem voluptatibus doloribus. Repudiandae corrupti sapiente delectus
+          harum a unde iusto. Quae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe consequuntur iure
+          aspernatur laudantium aliquid debitis quaerat et vel repellat veritatis hic distinctio molestias harum minima,
+          enim cum suscipit quae recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio blanditiis
+          molestias dolorum, alias nemo
           officia beatae voluptates nostrum, pariatur non sequi quisquam. Perferendis doloremque in unde illum omnis
           corrupti beatae!</p>
-          
-        <form class="form border" action="">
-          <h1 class="formhead">Have Questions?</h1>
-          <label for="">Name:</label>
-          <input type="text">
-          <label for="">Phone:</label>
-          <input type="text">
-          <label for="">Email:</label>
-          <input type="text">
-          <label for="">Talk to us!</label>
-          <textarea name="" id="" cols="30" rows="10"></textarea>
-        </form>
+        <div>
+          <!--This holds a border-->
+        </div>
+      </div>
+      <form class="form border" action="">
+        <h1 class="formhead">Questions?<span>let us know!</span></h1>
+        <label for="">Name:</label>
+        <input type="text">
+        <label for="">Phone:</label>
+        <input type="text">
+        <label for="">Email:</label>
+        <input type="text">
+        <label for="">Talk to us!</label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <input type="button" class="formbutton" value="Submit">
+      </form>
       <!-- </section> -->
 
     </footer>
-
+    <section class="truefoot">
+      <p><i>&copy; David A. Billé</i></p>
+    </section>
 
 
 
