page layout and content is complete. need to make responsive

--- a/floor.html
+++ b/floor.html
@@ -5,11 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./floor.css">
+  <link rel="stylesheet" href="./animate.css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Galdeano&display=swap" rel="stylesheet">
   <title>Floorplans</title>
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <div class="backbutton animated tada infinite"><a href="./landing.html"><i class="fa fa-arrow-circle-o-up" aria-hidden="true"></i>
+    </a></div>
+  </header>
   <main>
     <section>
       <div class="border"></div>
