--- a/landing.html
+++ b/landing.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./landing.css">
   <link rel="stylesheet" href="./animate.css">
-  <link href="https://fonts.googleapis.com/css?family=Aclonica&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Galdeano&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911&display=swap" rel="stylesheet">
