floor page is responsive. workin on about page responsive. need landing to be responsive

--- a/floor.html
+++ b/floor.html
@@ -18,7 +18,7 @@
   </header>
   <main>
     <section>
-      <div class="border"></div>
+      <div class="border1">Lower Floor</div>
       <img src="./Images/lowerfloor.png" alt="">
       <ul>
         <h3>Features</h3>
@@ -27,10 +27,10 @@
         <li>Waiting area</li>
         <li>Hall closet available for rent</li>
       </ul>
-      <div class="border"></div>
+      <div class="border2"></div>
     </section>
     <section>
-      <div class="border"></div>
+      <div class="border1">Main Floor</div>
       <img src="./Images/mainfloor.png" alt="">
       <ul>
         <h3>Features</h3>
@@ -42,10 +42,10 @@
         <li>Waiting area w/ cathedral ceiling</li>
         <li>Kitchenette w/ water cooler<br />microwave, cabinets and refrigerator</li>
       </ul>
-      <div class="border"></div>
+      <div class="border2"></div>
     </section>
     <section>
-      <div class="border"></div>
+      <div class="border1">Upper Floor</div>
       <img src="./Images/upperfloor.png" alt="">
       <ul>
         <h3>Features</h3>
@@ -54,7 +54,7 @@
         <li>Additional available exit via deck</li>
         <li>Two closets available for rent</li>
       </ul>
-      <div class="border"></div>
+      <div class="border2"></div>
     </section>
 
   </main>
