fixed background opacity and changed font color

--- a/landing.html
+++ b/landing.html
@@ -40,6 +40,7 @@
       </nav>
     </header>
     <main class="maincontent">
+      <div><!-- Background Image --></div>
       <section>
         <h1 class="maintext">
           space in<br />
