--- a/landing2.html
+++ b/landing2.html
@@ -16,16 +16,18 @@
   <header id="section-a">
     <section class="contacts">
       <h4>Mountainside Business Center</h4>
-      <p>(603) 833-7166</p>
-      <p><a href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a></p>
+      <div class="phone-email">
+        <p>(603) 833-7166</p>&nbsp; &nbsp;
+        <a href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a>
+      </div>
       <div class="social">
-        <a href="">Twitter</a>
-        <a href="">Facebook</a>
+        <a href="">Twitter</a>&nbsp; &nbsp;
+        <a href="">Facebook</a>&nbsp; &nbsp;
         <a href="">Instagram</a>
       </div>
     </section>
     <section class="heading">
-      <img src="./Images/MBC-logo.png" alt="">
+      <img class="mbc-logo"src="./Images/MBC-logo.png" alt="">
       <div class="links">
         <a href="#">Facilities</a>
         <a href="#">Floor Plans</a>
@@ -34,7 +36,9 @@
       </div>
     </section>
   </header>
+
   <!--End Section A / Start Section B-->
+
   <main id="section-b" class="grid">
     <div class="bg-image"></div>
     <div class="text-wrap">
@@ -43,10 +47,12 @@
         fugit blanditiis magnam, aperiam quo ex quia necessitatibus tempore earum placeat tenetur nihil illo, quod
         veniam.
       </p>
-      <button>Learn More</button>
+      <div class="button"><a href="#">Learn More</a></div>
     </div>
   </main>
+
   <!--End Section B / Start Section C-->
+
   <main id="section-c" class="grid">
     <div class="text-wrap">
       <h2>Why Choose MBC?</h2>
@@ -55,42 +61,50 @@
     <ul>
       <li>
         <div class="card">
-          <img src="" alt="">
+          <img src="./Images/location.jpg" alt="">
           <div class="card-content">
             <h3>Location</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente quis beatae suscipit alias fugit
-              veritatis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab facilis aliquid ut magni, ex, illo mollitia
+              ratione nesciunt reprehenderit, voluptas ducimus. Perferendis soluta eaque quia, ratione, molestias
+              facilis facere deleniti delectus optio, aliquid aspernatur natus!</p>
           </div>
         </div>
       </li>
       <li>
         <div class="card">
-          <img src="" alt="">
+          <img src="./Images/taxes.jpg" alt="">
           <div class="card-content">
-            <h3>Taxes?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente quis beatae suscipit alias fugit
-              veritatis.</p>
+            <h3>Taxes</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem, odit illum accusamus veniam
+              ipsum libero in impedit atque officia laboriosam possimus cupiditate eos voluptatem esse voluptate
+              aliquam! Itaque rem, neque eos veniam fugiat voluptas necessitatibus.</p>
           </div>
         </div>
       </li>
       <li>
         <div class="card">
-          <img src="" alt="">
+          <img src="./Images/flexibility.jpg" alt="">
           <div class="card-content">
-            <h3>Other</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente quis beatae suscipit alias fugit
-              veritatis.</p>
+            <h3>Flexibility</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi esse non repellat maiores dolores expedita
+              ipsam iure vel nisi quas veritatis rem optio ut, facere, commodi natus sit nam saepe adipisci, delectus
+              tempora voluptatum modi!</p>
           </div>
         </div>
       </li>
     </ul>
   </main>
+
   <!--End Section C / Start Section D-->
+
   <main id="section-d" class="grid">
-    <img src="" alt="">
+    <img src="./Images/manager.png" alt="">
     <section class="text-wrap">
-      <h2>Gretchen Ryan</h2>
-      <h4>Building Manager</h4>
+      <div>
+        <h2>Gretchen Ryan</h2>
+        <h4>Building Manager</h4>
+        <div class="horizontal-rule"></div>
+      </div>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo numquam dignissimos neque saepe temporibus
         voluptatum magni eius! Non et quidem laborum repellendus rerum, ratione praesentium. Tenetur beatae ducimus
         eaque vel.</p>
