almost finished mobile design

--- a/landing2.html
+++ b/landing2.html
@@ -27,7 +27,7 @@
       </div>
     </section>
     <section class="heading">
-      <img class="mbc-logo"src="./Images/MBC-logo.png" alt="">
+      <img class="mbc-logo" src="./Images/MBC-logo.png" alt="">
       <div class="links">
         <a href="#">Facilities</a>
         <a href="#">Floor Plans</a>
@@ -111,14 +111,15 @@
     </section>
     <section class="form-wrap">
       <form action=""></form>
-      <label for="">Name</label>
+      <label for="">Name:</label>
       <input type="text">
-      <label for="">Email</label>
+      <label for="">Email:</label>
       <input type="text">
-      <label for="">Phone</label>
+      <label for="">Phone:</label>
       <input type="text">
-      <label for="">Message</label>
+      <label for="">Message:</label>
       <textarea name="" id="" cols="30" rows="10"></textarea>
+      <input id="submit" type="button" value="Submit">
     </section>
   </main>
 </body>
