--- a/landing2.html
+++ b/landing2.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,15 +16,19 @@
   <!--Section A-->
   <header id="section-a">
     <section class="contacts">
-      <h4>Mountainside Business Center</h4>
+      <h4>Moutainside Business Center</h4>
+      <h4>Follow Us!</h4>
       <div class="phone-email">
         <p>(603) 833-7166</p>&nbsp; &nbsp;
         <a href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a>
       </div>
-      <div class="social">
-        <a href="">Twitter</a>&nbsp; &nbsp;
-        <a href="">Facebook</a>&nbsp; &nbsp;
-        <a href="">Instagram</a>
+      <div class="social1">
+        <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i>
+        </a>&nbsp; &nbsp;
+        <a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i>
+        </a>&nbsp; &nbsp;
+        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
       </div>
     </section>
     <section class="heading">
@@ -109,6 +114,7 @@
         voluptatum magni eius! Non et quidem laborum repellendus rerum, ratione praesentium. Tenetur beatae ducimus
         eaque vel.</p>
     </section>
+    <h3>Contact Us</h3>
     <section class="form-wrap">
       <form action=""></form>
       <label for="">Name:</label>
@@ -122,6 +128,14 @@
       <input id="submit" type="button" value="Submit">
     </section>
   </main>
+  <!--End Section D / Start Section E-->
+  <footer id="section-e">
+    <div class="phone-email2">
+      <p><i class="fa fa-phone" aria-hidden="true"></i>
+        (603) 833-7166</p>&nbsp; &nbsp;
+      <div><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;<a href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a></div>
+    </div>
+  </footer>
 </body>
 
 </html>
