--- a/landing.html
+++ b/landing.html
@@ -15,14 +15,15 @@
 </head>
 
 <body>
-  <!--
-  <div class="first-landing animated fadeOut">
+  <!--This Code is for Animation Loading-->
+  
+  <!--<div class="first-landing animated fadeOut">
     <h1 class="animated fadeInDown"><i>Welcome</i></h1>
     <span class="animated fadeInUp">to</span>
     <h2 class="animated fadeInRight">Mountainside <span class="animated fadeInLeft">Business Center</span></h2>
   </div> -->
   <!--Above code is for fadeIn landing page-->
-  <!-- <section class="wrapper animated fadeIn"> -->
+  <!-- <section class="wrapper animated fadeIn"> replace section on line below with this-->
   <section>
     <header>
       <img id="mbc-logo" src="./Images/MBC-logo.png" alt="">
