final changes to landing page mobile view

--- a/landing2.html
+++ b/landing2.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -133,7 +134,8 @@
     <div class="phone-email2">
       <p><i class="fa fa-phone" aria-hidden="true"></i>
         (603) 833-7166</p>&nbsp; &nbsp;
-      <div><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;<a href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a></div>
+      <div><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;<a
+          href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a></div>
     </div>
   </footer>
 </body>
