--- a/landing2.html
+++ b/landing2.html
@@ -20,8 +20,10 @@
       <h4>Moutainside Business Center</h4>
       <h4>Follow Us!</h4>
       <div class="phone-email">
-        <p>(603) 833-7166</p>&nbsp; &nbsp;
-        <a href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a>
+        <p><i class="fa fa-phone" aria-hidden="true"></i>
+          (603) 833-7166</p>&nbsp; &nbsp;
+        <div><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;<a
+            href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a></div>
       </div>
       <div class="social1">
         <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i>
@@ -59,8 +61,8 @@
 
   <!--End Section B / Start Section C-->
 
-  <main id="section-c" class="grid">
-    <div class="text-wrap">
+  <main id="section-c">
+    <div class="text-wrap grid">
       <h2>Why Choose MBC?</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure fugit illum dolorem enim! Commodi, qui?</p>
     </div>
@@ -115,6 +117,7 @@
         voluptatum magni eius! Non et quidem laborum repellendus rerum, ratione praesentium. Tenetur beatae ducimus
         eaque vel.</p>
     </section>
+    <section class="form">
     <h3>Contact Us</h3>
     <section class="form-wrap">
       <form action=""></form>
@@ -128,6 +131,7 @@
       <textarea name="" id="" cols="30" rows="10"></textarea>
       <input id="submit" type="button" value="Submit">
     </section>
+  </section>
   </main>
   <!--End Section D / Start Section E-->
   <footer id="section-e">
