final changes to landing page

--- a/landing2.html
+++ b/landing2.html
@@ -63,8 +63,10 @@
 
   <main id="section-c">
     <div class="text-wrap grid">
-      <h2>Why Choose MBC?</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure fugit illum dolorem enim! Commodi, qui?</p>
+      <div>
+        <h2>Why Choose MBC?</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure fugit illum dolorem enim! Commodi, qui?</p>
+      </div>
     </div>
     <ul>
       <li>
@@ -105,33 +107,36 @@
 
   <!--End Section C / Start Section D-->
 
-  <main id="section-d" class="grid">
-    <img src="./Images/manager.png" alt="">
-    <section class="text-wrap">
-      <div>
-        <h2>Gretchen Ryan</h2>
-        <h4>Building Manager</h4>
-        <div class="horizontal-rule"></div>
-      </div>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo numquam dignissimos neque saepe temporibus
-        voluptatum magni eius! Non et quidem laborum repellendus rerum, ratione praesentium. Tenetur beatae ducimus
-        eaque vel.</p>
-    </section>
+  <main id="section-d" class="grid2">
+    
+      <img src="./Images/manager.png" alt="">
+      <section class="text-wrap">
+        <div>
+          <h2>Gretchen Ryan</h2>
+          <h4>Building Manager</h4>
+          <div class="horizontal-rule"></div>
+        </div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo numquam dignissimos neque saepe
+          temporibus
+          voluptatum magni eius! Non et quidem laborum repellendus rerum, ratione praesentium. Tenetur beatae ducimus
+          eaque vel.</p>
+      </section>
+    
     <section class="form">
-    <h3>Contact Us</h3>
-    <section class="form-wrap">
-      <form action=""></form>
-      <label for="">Name:</label>
-      <input type="text">
-      <label for="">Email:</label>
-      <input type="text">
-      <label for="">Phone:</label>
-      <input type="text">
-      <label for="">Message:</label>
-      <textarea name="" id="" cols="30" rows="10"></textarea>
-      <input id="submit" type="button" value="Submit">
+      <h3>Contact Us</h3>
+      <section class="form-wrap">
+        <form action=""></form>
+        <label for="">Name:</label>
+        <input type="text">
+        <label for="">Email:</label>
+        <input type="text">
+        <label for="">Phone:</label>
+        <input type="text">
+        <label for="">Message:</label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <input id="submit" type="button" value="Submit">
+      </section>
     </section>
-  </section>
   </main>
   <!--End Section D / Start Section E-->
   <footer id="section-e">
@@ -142,6 +147,9 @@
           href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a></div>
     </div>
   </footer>
+  <section class="footer">
+    <p><i>&copy; David A. Billé</i></p>
+  </section>
 </body>
 
 </html>
