--- a/floor.html
+++ b/floor.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <div class="backbutton animated tada infinite"><a href="./landing.html"><i class="fa fa-arrow-circle-o-up" aria-hidden="true"></i>
+    <div class="backbutton animated tada infinite"><a href="./landing2.html"><i class="fa fa-arrow-circle-o-up" aria-hidden="true"></i>
     </a></div>
   </header>
   <main>
