--- a/landing2.html
+++ b/landing2.html
@@ -38,7 +38,7 @@
       <img class="mbc-logo" src="./Images/MBC-logo.png" alt="">
       <div class="links">
         <a href="#">Facilities</a>
-        <a href="#">Floor Plans</a>
+        <a href="./floor.html">Floor Plans</a>
         <a href="#">Tenants</a>
         <a href="#">Community</a>
       </div>
@@ -55,7 +55,7 @@
         fugit blanditiis magnam, aperiam quo ex quia necessitatibus tempore earum placeat tenetur nihil illo, quod
         veniam.
       </p>
-      <div class="button"><a href="#">Learn More</a></div>
+      <div class="button"><a href="./about.html">Learn More</a></div>
     </div>
   </main>
 
