rework for about page. working on mobile first design. Need to Style

--- a/about.html
+++ b/about.html
@@ -18,6 +18,46 @@
           aria-hidden="true"></i>
       </a></div>
   </header>
+<section id="section-a">
+  <div class="section-wrap">
+    <img src="./Images/lobby.jpg" alt="">
+    <div class="text-wrap">
+      <div class="header-wrap">
+        <h1>Why Mountainside?</h1>
+        <div class="horz-rule"></div>
+      </div>
+      <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+      </ul>
+      <button>Learn More</button>
+    </div>
+  </div>
+</section>
+<section id="section-b">
+  <div class="section-wrap">
+    <img src="./Images/outside.jpg" alt="">
+    <div class="text-wrap">
+      <div class="header-wrap">
+        <h1>Look No Further!</h1>
+        <div class="horz-rule"></div>
+      </div>
+      <ul>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+      </ul>
+      <button>Learn More</button>
+    </div>
+  </div>
+</section>
+
+
+
+
 </body>
 
 </html>
