updated landing page with loading animation

--- a/landing.html
+++ b/landing.html
@@ -17,14 +17,14 @@
 <body>
   <!--This Code is for Animation Loading-->
   
-  <!--<div class="first-landing animated fadeOut">
+  <div class="first-landing animated fadeOut">
     <h1 class="animated fadeInDown"><i>Welcome</i></h1>
     <span class="animated fadeInUp">to</span>
     <h2 class="animated fadeInRight">Mountainside <span class="animated fadeInLeft">Business Center</span></h2>
   </div> -->
-  <!--Above code is for fadeIn landing page-->
   <!-- <section class="wrapper animated fadeIn"> replace section on line below with this-->
-  <section>
+  <section class="wrapper animated fadeIn">
+    <!--Above Code for loading animation-->
     <header>
       <img id="mbc-logo" src="./Images/MBC-logo.png" alt="">
       <nav>
