--- a/landing2.html
+++ b/landing2.html
@@ -14,101 +14,108 @@
 </head>
 
 <body>
-  <!--Section A-->
-  <header id="section-a">
-    <section class="contacts">
-      <h4>Moutainside Business Center</h4>
-      <h4>Follow Us!</h4>
-      <div class="phone-email">
-        <p><i class="fa fa-phone" aria-hidden="true"></i>
-          (603) 833-7166</p>&nbsp; &nbsp;
-        <div><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;<a
-            href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a></div>
-      </div>
-      <div class="social1">
-        <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i>
-        </a>&nbsp; &nbsp;
-        <a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i>
-        </a>&nbsp; &nbsp;
-        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i>
-        </a>
-      </div>
-    </section>
-    <section class="heading">
-      <img class="mbc-logo" src="./Images/MBC-logo.png" alt="">
-      <div class="links">
-        <a href="#">Facilities</a>
-        <a href="./floor.html">Floor Plans</a>
-        <a href="#">Tenants</a>
-        <a href="#">Community</a>
-      </div>
-    </section>
-  </header>
-
-  <!--End Section A / Start Section B-->
-
-  <main id="section-b" class="grid">
-    <div class="bg-image"></div>
-    <div class="text-wrap">
-      <h1>The ideal space in the lakes region</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid debitis ullam explicabo inventore asperiores
-        fugit blanditiis magnam, aperiam quo ex quia necessitatibus tempore earum placeat tenetur nihil illo, quod
-        veniam.
-      </p>
-      <div class="button"><a href="./about.html">Learn More</a></div>
-    </div>
-  </main>
-
-  <!--End Section B / Start Section C-->
-
-  <main id="section-c">
-    <div class="text-wrap grid">
-      <div>
-        <h2>Why Choose MBC?</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure fugit illum dolorem enim! Commodi, qui?</p>
-      </div>
-    </div>
-    <ul>
-      <li>
-        <div class="card">
-          <img src="./Images/location.jpg" alt="">
-          <div class="card-content">
-            <h3>Location</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab facilis aliquid ut magni, ex, illo mollitia
-              ratione nesciunt reprehenderit, voluptas ducimus. Perferendis soluta eaque quia, ratione, molestias
-              facilis facere deleniti delectus optio, aliquid aspernatur natus!</p>
-          </div>
+  <div class="first-landing animated fadeOut">
+    <h1 class="animated fadeInDown"><i>Welcome</i></h1>
+    <span class="animated fadeInUp">to</span>
+    <h2 class="animated fadeInRight">Mountainside <span class="animated fadeInLeft">Business Center</span></h2>
+  </div>
+  <section class="wrapper animated fadeIn">
+    <!--Section A-->
+    <header id="section-a">
+      <section class="contacts">
+        <h4>Moutainside Business Center</h4>
+        <h4>Follow Us!</h4>
+        <div class="phone-email">
+          <p><i class="fa fa-phone" aria-hidden="true"></i>
+            (603) 833-7166</p>&nbsp; &nbsp;
+          <div><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;<a
+              href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a></div>
         </div>
-      </li>
-      <li>
-        <div class="card">
-          <img src="./Images/taxes.jpg" alt="">
-          <div class="card-content">
-            <h3>Taxes</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem, odit illum accusamus veniam
-              ipsum libero in impedit atque officia laboriosam possimus cupiditate eos voluptatem esse voluptate
-              aliquam! Itaque rem, neque eos veniam fugiat voluptas necessitatibus.</p>
-          </div>
+        <div class="social1">
+          <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i>
+          </a>&nbsp; &nbsp;
+          <a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i>
+          </a>&nbsp; &nbsp;
+          <a href=""><i class="fa fa-instagram" aria-hidden="true"></i>
+          </a>
         </div>
-      </li>
-      <li>
-        <div class="card">
-          <img src="./Images/flexibility.jpg" alt="">
-          <div class="card-content">
-            <h3>Flexibility</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi esse non repellat maiores dolores expedita
-              ipsam iure vel nisi quas veritatis rem optio ut, facere, commodi natus sit nam saepe adipisci, delectus
-              tempora voluptatum modi!</p>
-          </div>
+      </section>
+      <section class="heading">
+        <img class="mbc-logo" src="./Images/MBC-logo.png" alt="">
+        <div class="links">
+          <a href="#">Facilities</a>
+          <a href="./floor.html">Floor Plans</a>
+          <a href="#">Tenants</a>
+          <a href="#">Community</a>
         </div>
-      </li>
-    </ul>
-  </main>
+      </section>
+    </header>
 
-  <!--End Section C / Start Section D-->
+    <!--End Section A / Start Section B-->
 
-  <main id="section-d" class="grid2">
-    
+    <main id="section-b" class="grid">
+      <div class="bg-image"></div>
+      <div class="text-wrap">
+        <h1>The ideal space in the lakes region</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid debitis ullam explicabo inventore
+          asperiores
+          fugit blanditiis magnam, aperiam quo ex quia necessitatibus tempore earum placeat tenetur nihil illo, quod
+          veniam.
+        </p>
+        <div class="button"><a href="./about.html">Learn More</a></div>
+      </div>
+    </main>
+
+    <!--End Section B / Start Section C-->
+
+    <main id="section-c">
+      <div class="text-wrap grid">
+        <div>
+          <h2>Why Choose MBC?</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure fugit illum dolorem enim! Commodi, qui?</p>
+        </div>
+      </div>
+      <ul>
+        <li>
+          <div class="card">
+            <img src="./Images/location.jpg" alt="">
+            <div class="card-content">
+              <h3>Location</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab facilis aliquid ut magni, ex, illo mollitia
+                ratione nesciunt reprehenderit, voluptas ducimus. Perferendis soluta eaque quia, ratione, molestias
+                facilis facere deleniti delectus optio, aliquid aspernatur natus!</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="card">
+            <img src="./Images/taxes.jpg" alt="">
+            <div class="card-content">
+              <h3>Taxes</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem, odit illum accusamus veniam
+                ipsum libero in impedit atque officia laboriosam possimus cupiditate eos voluptatem esse voluptate
+                aliquam! Itaque rem, neque eos veniam fugiat voluptas necessitatibus.</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="card">
+            <img src="./Images/flexibility.jpg" alt="">
+            <div class="card-content">
+              <h3>Flexibility</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi esse non repellat maiores dolores
+                expedita
+                ipsam iure vel nisi quas veritatis rem optio ut, facere, commodi natus sit nam saepe adipisci, delectus
+                tempora voluptatum modi!</p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </main>
+
+    <!--End Section C / Start Section D-->
+
+    <main id="section-d" class="grid2">
       <img src="./Images/manager.png" alt="">
       <section class="text-wrap">
         <div>
@@ -121,34 +128,34 @@
           voluptatum magni eius! Non et quidem laborum repellendus rerum, ratione praesentium. Tenetur beatae ducimus
           eaque vel.</p>
       </section>
-    
-    <section class="form">
-      <h3>Contact Us</h3>
-      <section class="form-wrap">
-        <form action=""></form>
-        <label for="">Name:</label>
-        <input type="text">
-        <label for="">Email:</label>
-        <input type="text">
-        <label for="">Phone:</label>
-        <input type="text">
-        <label for="">Message:</label>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-        <input id="submit" type="button" value="Submit">
+      <section class="form">
+        <h3>Contact Us</h3>
+        <section class="form-wrap">
+          <form action=""></form>
+          <label for="">Name:</label>
+          <input type="text">
+          <label for="">Email:</label>
+          <input type="text">
+          <label for="">Phone:</label>
+          <input type="text">
+          <label for="">Message:</label>
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <input id="submit" type="button" value="Submit">
+        </section>
       </section>
+    </main>
+    <!--End Section D / Start Section E-->
+    <footer id="section-e">
+      <div class="phone-email2">
+        <p><i class="fa fa-phone" aria-hidden="true"></i>
+          (603) 833-7166</p>&nbsp; &nbsp;
+        <div><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;<a
+            href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a></div>
+      </div>
+    </footer>
+    <section class="footer">
+      <p><i>&copy; David A. Billé</i></p>
     </section>
-  </main>
-  <!--End Section D / Start Section E-->
-  <footer id="section-e">
-    <div class="phone-email2">
-      <p><i class="fa fa-phone" aria-hidden="true"></i>
-        (603) 833-7166</p>&nbsp; &nbsp;
-      <div><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;<a
-          href="mailto:manager@mountainsidebusinesscenter.com">manager@mountainsidebusinesscenter.com</a></div>
-    </div>
-  </footer>
-  <section class="footer">
-    <p><i>&copy; David A. Billé</i></p>
   </section>
 </body>
 
