--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
       </a></div>
   </header>
 <section id="section-a">
-  <div class="section-wrap">
+  <div class="section-wrap border">
     <img src="./Images/lobby.jpg" alt="">
-    <div class="text-wrap">
+    <div class="text-wrap border">
       <div class="header-wrap">
         <h1>Why Mountainside?</h1>
         <div class="horz-rule"></div>
@@ -37,9 +37,9 @@
   </div>
 </section>
 <section id="section-b">
-  <div class="section-wrap">
+  <div class="section-wrap border">
     <img src="./Images/outside.jpg" alt="">
-    <div class="text-wrap">
+    <div class="text-wrap border">
       <div class="header-wrap">
         <h1>Look No Further!</h1>
         <div class="horz-rule"></div>
@@ -62,44 +62,3 @@
 
 </html>
 
-<!--
-<div class="backbutton animated tada infinite"><a href="./landing2.html"><i class="fa fa-arrow-circle-o-left"
-  aria-hidden="true"></i></a></div>
-<div class="content">
-<section class="wrapper">
-<img id="image1" src="./Images/outside.jpg" alt="">
-<section class="text-wrap">
-  <div>
-    <h2>Why Mountainside?</h2>
-    <div>-->
-<!--HR DIV-->
-<!--</div>
-  </div>
-  <ul>
-    <li>FREE UTILITIES</li>
-    <li>Less than 2 hours to major airports</li>
-    <li>State of the art equipment and facilities</li>
-    <li>Spacious floorplans with sound-proof walls</li>
-  </ul>
-  <button class="button1">More Info &nbsp<i class="fa fa-caret-right" aria-hidden="true"></i></button>
-</section>
-</section>
-<section class="wrapper">
-<section class="text-wrap ">
-  <div>
-    <h2>Look No Further!</h2>
-    <div>-->
-<!--HR DIV-->
-<!--</div>
-  </div>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aut laborum deserunt beatae, alias quas.
-    Voluptates dolor, similique iste aut, accusantium sed consequuntur</p>
-  <p>Lots of stuff and things with amazing access to boston, portland, the seacoast and multiple college campuses.
-    Free utilities and cleaning included in price of rent this place is off the chain and will be the hub fo your
-    dreams. </p>
-  <button class="button2">More Info &nbsp;<i class="fa fa-caret-right" aria-hidden="true"></i></button>
-</section>
-<img id="image2" src="./Images/lobby.jpg" alt="">
-</section>
-</section>
-</div>-->
