--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
         <div class="horz-rule"></div>
       </div>
       <ul>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Headquarter your business in an up and coming region!</li>
+        <li>All business spaces come with <u>FREE UTILITIES INCLUDED</u></li>
+        <li>Close Proximity to Boston, MA and Portland, ME</li>
+        <li>Take advantage of the benefit of doing business in tax free NH!</li>
       </ul>
       <button>Learn More</button>
     </div>
@@ -44,12 +44,7 @@
         <h1>Look No Further!</h1>
         <div class="horz-rule"></div>
       </div>
-      <ul>
-          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-      </ul>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nemo quidem eum, eos provident dicta numquam est libero, dolores reprehenderit maxime nobis placeat sit quisquam incidunt ipsam et ullam odio!</p>
       <button>Learn More</button>
     </div>
   </div>
