--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <div class="backbutton animated tada infinite"><a href="./landing2.html"><i class="fa fa-arrow-circle-o-up"
+    <div class="backbutton animated tada infinite"><a href="./index.html"><i class="fa fa-arrow-circle-o-up"
           aria-hidden="true"></i>
       </a></div>
   </header>
