--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./landing2.css">
+  <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="./animate.css">
   <title>Mountainside Business Center</title>
 </head>
@@ -91,7 +91,7 @@
           <div class="card">
             <img src="./Images/taxes.jpg" alt="">
             <div class="card-content">
-              <h3>Taxes</h3>
+              <h3>Pricing</h3>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem, odit illum accusamus veniam
                 ipsum libero in impedit atque officia laboriosam possimus cupiditate eos voluptatem esse voluptate
                 aliquam! Itaque rem, neque eos veniam fugiat voluptas necessitatibus.</p>
